gradle from fabric-example-mod
Signed-off-by: unilock <unilock@fennet.rentals>

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,33 @@
-.vscode
-.idea
-.gradle
-.settings
-.project
-.classpath
-gradle
-gradlew
-gradlew*
-bin
-run
-build
+# gradle
 
+.gradle/
+build/
+out/
+classes/
+
+# eclipse
+
+*.launch
+
+# idea
+
+.idea/
+*.iml
+*.ipr
+*.iws
+
+# vscode
+
+.settings/
+.vscode/
+bin/
+.classpath
+.project
+
+# macos
+
+*.DS_Store
+
+# fabric
+
+run/
